--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -7,9 +7,14 @@
 {{> navbar }}
 <h2>Registrieren</h2>
 <hr>
-<form>
+<form class="registerForm">
     <input id="firstNameRegister" type="text" placeholder="Vorname">
     <input id="lastNameRegister" type="text" placeholder="Nachname">
+
+    <input id="passwordRegister" type="password" placeholder="Passwort">
+
+    <input id="emailRegister" type="email" placeholder="Email">
+    <input id="phoneNumberRegister" type="tel" placeholder="Telefonnummer">
 
     <input id="registerButton" type="button" value="Registrieren">
 </form>
