- Added Hbs to package.json - Created header.hbs for <head> - Updated navbar.hbs - register.hbs now uses the top- and bottomIncludes - added Helper to main.ts

--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -1,5 +1,10 @@
-<div class="navbar">
-    <a id="searchingNavEntry">Suche</a>
-    <a id="offeringNavEntry">Biete</a>
-    <a id="login">Anmelden/Registieren</a>
-</div>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo left">Logo</a>
+        <ul class="right">
+            <li><a id="searchingNavEntry">Suche</a></li>
+            <li><a id="offeringNavEntry">Biete</a></li>
+            <li><a id="login">Anmelden/Registieren</a></li>
+        </ul>
+    </div>
+</nav>
