--- a/src/frontend/views/userprofile.hbs
+++ b/src/frontend/views/userprofile.hbs
@@ -8,7 +8,15 @@
 <h2>User-Profil</h2>
 <hr>
 <img src="" alt="Profilbild">
-<div class="userName"><h3>Vorname</h3>
-    <h3>Nachname</h3></div>
+<div class="userName">
+    <h3>Vorname</h3>
+    <h3>Nachname</h3>
+</div>
+<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+    elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+    eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+    dolor sit amet.</p>
 </body>
 </html>
