added global css, added jquery js

--- a/src/frontend/views/partials/footer.hbs
+++ b/src/frontend/views/partials/footer.hbs
@@ -16,3 +16,20 @@
     </div>
 
 </footer>
+
+<footer class="page-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">WirVsVrus Haustier</h5>
+                <p class="grey-text text-lighten-4">Projekt des #wirvsvirus Hackathons der Bundesregierung</p>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <div class="container">
+            Copyright &#169; 2019 Haustier e.V.
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+    </div>
+</footer>
