--- a/src/frontend/views/partials/header.hbs
+++ b/src/frontend/views/partials/header.hbs
@@ -2,4 +2,11 @@
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="/assets/materialize/materialize.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/assets/materialize/materialize.min.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+<!--    custom css -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/global.css">
 </head>
