--- a/src/frontend/views/login.hbs
+++ b/src/frontend/views/login.hbs
@@ -1,24 +1,38 @@
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Login</title>
-</head>
-<body>
-{{> navbar }}
-<h2>Login</h2>
-<hr>
-<div class="loginInput">
-    <form><input id="userInput" type="text" placeholder="Benutzername">
-        <input id="passwordInput" type="password" placeholder="Password">
-        <input id="loginButton" type="button" value="Login"></form>
+{{setVar "title" "Login"}}
+{{> topInclude }}
+<div class="container">
+    <h2>Login</h2>
+    <hr id="siteHeaderUnderline">
 </div>
-<div class="passwordForgotten">
-    <p>Passwort vergessen?</p>
-    <a href="">Passwort zurücksetzen</a>
+<div class="container">
+    <div class="loginInput row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s12">
+                    <label for="emailLogin">Email</label>
+                    <input id="emailLogin" type="email" class="validate">
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <label for="passwordLogin">Passwort</label>
+                    <input id="passwordLogin" type="password" class="validate">
+                </div>
+            </div>
+            <input id="loginButton" type="button" value="Login" class="btn">
+        </form>
+    </div>
+    <div class="passwordForgotten">
+        <p>Passwort vergessen?
+            <br>
+            <a href="">Passwort zurücksetzen</a>
+        </p>
+    </div>
+    <div>
+        <p>Noch keinen Account?
+            <br>
+            <a href="">Hier registrieren</a>
+        </p>
+    </div>
 </div>
-<div>
-    <p>Noch keinen Account?</p>
-    <a href="">Hier registrieren</a>
-</div>
-</body>
-</html>
+{{> bottomInclude }}
