--- a/src/frontend/views/login.hbs
+++ b/src/frontend/views/login.hbs
@@ -6,20 +6,20 @@
 </div>
 <div class="container">
     <div class="loginInput row">
-        <form class="col s12">
+        <form class="col l12">
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col l12">
                     <label for="emailLogin">Email</label>
                     <input id="emailLogin" type="email" class="validate">
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col l12">
                     <label for="passwordLogin">Passwort</label>
                     <input id="passwordLogin" type="password" class="validate">
                 </div>
             </div>
-            <input id="loginButton" type="button" value="Login" class="btn">
+            <input id="loginButton" type="submit" value="Login" class="btn">
         </form>
     </div>
     <div class="passwordForgotten">
