--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -6,41 +6,41 @@
 </div>
 <div class="container">
     <div class="row">
-        <form class="registerForm col s12">
+        <form class="registerForm col l12">
             <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col l6">
                     <input id="firstNameRegister" type="text"
                            class="validate">
                     <label for="firstNameRegister">Vorname</label>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col l6">
                     <input id="lastNameRegister" type="text" class="validate">
                     <label for="lastNameRegister">Nachname</label>
                 </div>
             </div>
 
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col l12">
                     <label for="passwordRegister">Passwort</label>
                     <input id="passwordRegister" type="password" class="validate">
                 </div>
             </div>
 
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col l12">
                     <label for="emailRegister">Email</label>
                     <input id="emailRegister" type="email" class="validate">
                 </div>
             </div>
 
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col l12">
                     <label for="phoneNumberRegister">Telefonnummer</label>
                     <input id="phoneNumberRegister" type="tel">
                 </div>
             </div>
 
-            <input class="btn" id="registerButton" type="button" value="Registrieren">
+            <input class="btn" id="registerButton" type="submit" value="Registrieren">
         </form>
     </div>
 </div>
