--- a/src/frontend/views/partials/header.hbs
+++ b/src/frontend/views/partials/header.hbs
@@ -9,4 +9,5 @@
 
 <!--    custom css -->
     <link rel="stylesheet" type="text/css" href="/assets/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/userprofile.css">
 </head>
