--- a/src/frontend/views/userprofile.hbs
+++ b/src/frontend/views/userprofile.hbs
@@ -1,22 +1,59 @@
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>User-Profil</title>
-</head>
-<body>
-{{> navbar }}
-<h2>User-Profil</h2>
-<hr>
-<img src="" alt="Profilbild">
-<div class="userName">
-    <h3>Vorname</h3>
-    <h3>Nachname</h3>
+{{setVar "title" "Registrierung"}}
+
+{{setVar "imgSrc" "assets/img/alexander-else-foto.jpg"}}
+{{setVar "textHeadline" "Über mich"}}
+{{setVar "userName" "Alexander Else"}}
+{{> topInclude }}
+<div class="container">
+    <h1 id="user-headline">{{userName}}</h1>
 </div>
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-    elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-    eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-    dolor sit amet.</p>
-</body>
-</html>
+<div class="container">
+    <div class="row">
+        <div id="userProfileImageWrapper" class="col l4 s12">
+            <img src="{{imgSrc}}" alt="Nutzer Profilbild" id="user-profile-img" class="col l4 s12">
+        </div>
+        <div class="col l8 s12">
+            <h3>{{textHeadline}}</h3>
+            <p class="flow-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col l6 s12">
+            <p class="flow-text">Name:</p>
+            <p class="flow-text">Nachname:</p>
+            <p class="flow-text">Alter:</p>
+            <p class="flow-text">Erfahrung:</p>
+            <div id="expierence-wrapper">
+                {{#each expierence}}
+                    <p class="chip">{{this}}</p>
+                {{/each}}
+            </div>
+        </div>
+        <div class="animals-list col l6 s12">
+            {{#each animals}}
+                <div class="animal-card card horizontal">
+                    <div class="card-image">
+                        <img src="{{this.animalPicture}}" alt="Tier Bild">
+                    </div>
+                    <div class="card-stacked">
+                        <div class="card-content">
+                            <p class="flow-text">Name: {{this.animalname}}</p>
+                            <p class="flow-text">Größe: {{this.size}}</p>
+                            <p class="flow-text">gewicht: {{this.weight}}</p>
+                        </div>
+                        <div class="card-action">
+<!--                            TODO set link-->
+                            <a href="#">Bearbeiten</a>
+                        </div>
+                    </div>
+                </div>
+            {{/each}}
+        </div>
+    </div>
+</div>
+{{> bottomInclude }}
