--- a/src/frontend/views/createSearch.hbs
+++ b/src/frontend/views/createSearch.hbs
@@ -53,7 +53,7 @@
 
             <div class="row">
                 <div class="col l12 input-field">
-                    <label for="offerDescription">Beschreibung des Suche</label>
+                    <label for="offerDescription">Beschreibung der Suche</label>
                     <textarea id="offerDescription" class="materialize-textarea" maxlength="600"></textarea>
                     <span class="helper-text">Maximal 600 Zeichen</span>
                 </div>
