- Link to add Animal when creating Search

--- a/src/frontend/views/createSearch.hbs
+++ b/src/frontend/views/createSearch.hbs
@@ -48,7 +48,9 @@
             </div>
             <div class="col l6">
                 <h5>Tier(e) auswählen</h5>
-
+                <div>
+                    <a>Tier(e) hinzufügen</a>
+                </div>
             </div>
 
             <div class="row">
