--- a/src/frontend/views/createSearch.hbs
+++ b/src/frontend/views/createSearch.hbs
@@ -6,6 +6,24 @@
 </div>
 <div class="container">
     <div class="row">
+        <div class="col l12">
+            <div class="card orange darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Haustiere sind keine Viren-Träger!</span>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+                        dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+                        sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+                        justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+                        ipsum dolor sit amet.
+                    </p>
+                </div>
+                <div class="card-action">
+                    <a class="black-text" href="#">Weitere Informationen</a>
+                </div>
+            </div>
+        </div>
         <form class="col l12">
             <div class="col l6">
                 <h5>Service(s)</h5>
