added FE controller

--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -1,25 +1,24 @@
-<!--<div class="navbar">-->
-<!--    <a id="searchingNavEntry">Suche</a>-->
-<!--    <a id="offeringNavEntry">Biete</a>-->
-<!--    <a id="login">Anmelden/Registieren</a>-->
-<!--</div>-->
-
-
 <nav>
     <div class="nav-wrapper container">
-        <a href="#" class="brand-logo">WirVsVirus</a>
+        <a href="/" class="brand-logo">WirVsVirus</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a id="searchingNavEntry" href="sass.html">Suche</a></li>
-            <li><a id="offeringNavEntry" href="badges.html">Biete</a></li>
-            <li><a id="login" >Anmelden und Registrieren</a></li>
+            <li><a id="" href="/search">Suche</a></li>
+            <li><a id="" href="/login">Login</a></li>
+            <li><a id="" href="/register">Register</a></li>
+            <li><a id="" href="/profile">Profile</a></li>
+            <li><a id="" href="/create-search">Suche erstellen</a></li>
+            <li><a id="" href="/create-offer">Angebot Erstellen</a></li>
         </ul>
     </div>
 
     <ul class="sidenav" id="mobile-demo">
-        <li><a id="searchingNavEntry" href="sass.html">Suche</a></li>
-        <li><a id="offeringNavEntry" href="badges.html">Biete</a></li>
-        <li><a id="login" >Anmelden und Registrieren</a></li>
+        <li><a id="" href="/search">Suche</a></li>
+        <li><a id="" href="/login">Login</a></li>
+        <li><a id="" href="/register">Register</a></li>
+        <li><a id="" href="/profile">Profile</a></li>
+        <li><a id="" href="/create-search">Profile</a></li>
+        <li><a id="" href="/create-offer">Profile</a></li>
     </ul>
 </nav>
 
