--- a/src/frontend/views/search.hbs
+++ b/src/frontend/views/search.hbs
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="utf-8" />
-    <title>App</title>
-</head>
-<body>
-{{> head}}
-{{> navbar }}
-{{> listLayout}}
-{{ message }}
-{{> footer}}
-</body>
-</html>
+{{> topInclude }}
+
+{{> bottomInclude }}
