--- a/src/frontend/views/partials/listLayout.hbs
+++ b/src/frontend/views/partials/listLayout.hbs
@@ -3,8 +3,14 @@
         <!--some personal info for example address -->
     </div>
     <div class="list">
+        {{>containerOffer_Customer}}
+
         {{#each page.containerTab}}
-            <div> {{>containerAnimal container=.}}    </div>
+            {{#if cond1}}
+                <div> {{>containerOffer_Customer container=.}}    </div>
+            {{else}}
+                <div> {{>containerOffer_Owner container=.}}    </div>
+            {{/if}}
         {{/each}}
     </div>
 </div>
