--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -1,5 +1,22 @@
-<div class="filter">
-    <form class="filterForm">
+<form class="filterForm">
+
+    <!-- radius (suchkreis) -->
+    <div class="row">
+        <label>Radius:</label>
+        <select class="sc-input" data-test="zipRadius">
+            <option selected="" value="null">Umkreis</option>
+            <option value="1">1 km</option>
+            <option value="2">2 km</option>
+            <option value="5">5 km</option>
+            <option value="10">10 km</option>
+            <option value="15">15 km</option>
+            <option value="20">20 km</option>
+            <option value="25">25 km</option>
+            <option value="30">30 km</option>
+            <option value="40">40 km</option>
+        </select>
+    </div>
+    <div class="row">
         <!--//tierart -->
         <label for="species">Art</label>
         <select class="filterDropDowns" id="species" name="species">
@@ -7,52 +24,83 @@
                 <option value="{{this.uuid}}">{{this.name}}</option>
             {{/each}}
         </select>
-        <!--//Service -->
+    </div>
+    <!-- Geschlecht Tier -->
+    <div class="row">
+        <label for="gender">Geschlecht des Hundes:</label>
+        <select id="gender">
+            <option value="male">Männlich</option>
+            <option value="female">Weiblich</option>
+            <option value="divers">Männlich kastriert</option>
+        </select>
+    </div>
+    <!--//Service -->
+    <div class="row">
         <label for="service">Service</label>
         <select id="service" name="service">
             {{#each page.service}}
                 <option value="{{this.uuid}}">{{this.name}}</option>
             {{/each}}
         </select>
-        <!-- Alter-->
+    </div>
+    <!-- Alter-->
+    <div class="row">
+        <label for="age">Alter:</label>
+        <p class="range-field">
+            <input type="range" id="test5" min="0" max="100"/>
+        </p>
+    </div>
 
-        <div class="ageslider">
-            <label for="age">Alter</label>
-            <input type="range" min="1" max="100" value="50" class="slider" id="myRange" name="age">
-        </div>
-        <!-- Rasse -->
+    <!-- Rasse -->
+    <div class="row">
+
         <label for="breed">Rasse</label>
         <select class="filterDropDowns" id="breed">
             {{#each page.breed}}
                 <option value="{{this.uuid}}">{{this.name}}</option>
             {{/each}}
         </select>
-        <!-- Weitere Filter -->
-        <div class="extended filter">
-            <!-- Rezensionen
-            Not sure how to display yet
-            -->
-            <!-- Groesse -->
-            <div class="interval-input-group">
-                    <span id="interval-from">
-                    </span>
-                <span id="interval-to">
-                    </span>
-            </div>
-            <!-- Gewicht -->
-            <div class="interval-input-group">
-                    <span id="interval-from">
-                    </span>
-                <span id="interval-to">
-                    </span>
-            </div>
-            <!-- Dringlichkeit -->
-            <div>
-                <input type="radio" id="needed" name="urgency" value="needed">
-                <label for="needed">Needed</label><br>
-                <input type="radio" id="volunteering" name="urgency" value="volunteering">
-                <label for="volunteering">Volunteering</label><br>
-            </div>
-        </div>
-    </form>
-</div>
+    </div>
+    <!-- Weitere Filter -->
+
+    <!-- Groesse -->
+
+    <div class="row">
+        <label for="weight">Größe:</label>
+        <p class="range-field">
+            <input type="range" id="test5" min="0" max="100"/>
+        </p>
+    </div>
+
+    <!-- Gewicht -->
+    <div class="row">
+        <label for="weight">Gewicht:</label>
+        <p class="range-field">
+            <input type="range" id="test5" min="0" max="100"/>
+        </p>
+    </div>
+
+    <!-- Dringlichkeit -->
+    <div class="row ">
+        <label for="urgency">Dringlichkeit:</label>
+        <p>
+            <label>
+                <input class="with-gap" name="urgency" type="radio" checked/>
+                <span>Benötigt</span>
+            </label>
+        </p>
+        <p>
+            <label>
+                <input class="with-gap" name="urgency" type="radio" checked/>
+                <span>Freiwillig</span>
+            </label>
+        </p>
+    </div>
+
+    <div class="row">
+    </div>
+
+
+</form>
+
+
