--- a/src/frontend/views/createSearch.hbs
+++ b/src/frontend/views/createSearch.hbs
@@ -29,37 +29,37 @@
                 <h5>Service(s)</h5>
                 <div class="row">
                     <label>
-                        <input type="checkbox" id="offerServiceWalk">
+                        <input type="checkbox" name="offerServiceWalk" id="offerServiceWalk">
                         <span>Gassi gehen</span>
                     </label>
                 </div>
                 <div class="row">
                     <label>
-                        <input type="checkbox" id="offerServiceFood">
+                        <input type="checkbox" name="offerServiceFood" id="offerServiceFood">
                         <span>Futter kaufen</span>
                     </label>
                 </div>
                 <div class="row">
                     <label>
-                        <input type="checkbox" id="offerServiceShortInternal">
+                        <input type="checkbox" name="offerServiceShortInternal" id="offerServiceShortInternal">
                         <span>Kurzfristige Betreuung (intern)</span>
                     </label>
                 </div>
                 <div class="row">
                     <label>
-                        <input type="checkbox" id="offerServiceShortExternal">
+                        <input type="checkbox" name="offerServiceShortExternal" id="offerServiceShortExternal">
                         <span>Kurzfristige Betreuung (extern)</span>
                     </label>
                 </div>
                 <div class="row">
                     <label>
-                        <input type="checkbox" id="offerServiceLongInternal">
+                        <input type="checkbox" name="offerServiceLongInternal" id="offerServiceLongInternal">
                         <span>Langfristige Betreuung (intern)</span>
                     </label>
                 </div>
                 <div class="row">
                     <label>
-                        <input type="checkbox" id="offerServiceLongExternal">
+                        <input type="checkbox" name="offerServiceLongExternal" id="offerServiceLongExternal">
                         <span>Langfristige Betreuung (extern)</span>
                     </label>
                 </div>
