--- a/src/frontend/views/login.hbs
+++ b/src/frontend/views/login.hbs
@@ -6,17 +6,17 @@
 </div>
 <div class="container">
     <div class="loginInput row">
-        <form class="col l12">
+        <form class="col l12" method="post" action="/login/submit">
             <div class="row">
                 <div class="input-field col l12">
                     <label for="emailLogin">Email</label>
-                    <input id="emailLogin" type="email" class="validate">
+                    <input id="emailLogin" name="emailLogin" type="email" class="validate">
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col l12">
                     <label for="passwordLogin">Passwort</label>
-                    <input id="passwordLogin" type="password" class="validate">
+                    <input id="passwordLogin" name="passwordLogin" type="password" class="validate">
                 </div>
             </div>
             <input id="loginButton" type="submit" value="Login" class="btn">
@@ -31,7 +31,7 @@
     <div>
         <p>Noch keinen Account?
             <br>
-            <a href="">Hier registrieren</a>
+            <a href="/register">Hier registrieren</a>
         </p>
     </div>
 </div>
