--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -9,12 +9,12 @@
         <form class="registerForm col l12">
             <div class="row">
                 <div class="input-field col l6">
-                    <input id="firstNameRegister" type="text"
+                    <input id="firstNameRegister" type="text" name="firstNameRegister"
                            class="validate">
                     <label for="firstNameRegister">Vorname</label>
                 </div>
                 <div class="input-field col l6">
-                    <input id="lastNameRegister" type="text" class="validate">
+                    <input id="lastNameRegister" type="text" name="lastNameRegister" class="validate">
                     <label for="lastNameRegister">Nachname</label>
                 </div>
             </div>
@@ -22,21 +22,21 @@
             <div class="row">
                 <div class="input-field col l12">
                     <label for="passwordRegister">Passwort</label>
-                    <input id="passwordRegister" type="password" class="validate">
+                    <input id="passwordRegister" type="password" name="passwordRegister" class="validate">
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col l12">
                     <label for="emailRegister">Email</label>
-                    <input id="emailRegister" type="email" class="validate">
+                    <input id="emailRegister" type="email" name="emailRegister" class="validate">
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col l12">
                     <label for="phoneNumberRegister">Telefonnummer</label>
-                    <input id="phoneNumberRegister" type="tel">
+                    <input id="phoneNumberRegister" name="phoneNumberRegister" type="tel">
                 </div>
             </div>
 
