--- a/src/frontend/views/partials/header.hbs
+++ b/src/frontend/views/partials/header.hbs
@@ -11,4 +11,5 @@
     <!--    custom css -->
     <link rel="stylesheet" type="text/css" href="/assets/css/global.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/userprofile.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/search.css">
 </head>
