--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -1,7 +1,6 @@
 <form class="filterForm">
-
     <!-- radius (suchkreis) -->
-    <div class="row">
+    <div class="row filterGroup">
         <label>Radius:</label>
         <select class="sc-input" data-test="zipRadius">
             <option selected="" value="null">Umkreis</option>
@@ -27,7 +26,7 @@
     </div>
     <!-- Geschlecht Tier -->
     <div class="row">
-        <label for="gender">Geschlecht des Hundes:</label>
+        <label for="gender">Geschlecht des Tieres:</label>
         <select id="gender">
             <option value="male">Männlich</option>
             <option value="female">Weiblich</option>
@@ -46,8 +45,9 @@
     <!-- Alter-->
     <div class="row">
         <label for="age">Alter:</label>
-        <p class="range-field">
-            <input type="range" id="test5" min="0" max="100"/>
+        <p class="range-field center-align">
+            <span id="sliderValue"></span><br>
+            <input type="range" min="0" max="100" step="1" name="sld" value="50" onchange="showValue(this.value)">
         </p>
     </div>
 
@@ -66,17 +66,19 @@
     <!-- Groesse -->
 
     <div class="row">
-        <label for="weight">Größe:</label>
-        <p class="range-field">
-            <input type="range" id="test5" min="0" max="100"/>
+        <label for="weight">Größe(in cm):</label>
+        <p class="range-field center-align">
+            <span id="sliderValue2"></span><br>
+            <input type="range" min="0" max="100" step="1" name="sld" value="50" onchange="showValue2(this.value)">
         </p>
     </div>
 
     <!-- Gewicht -->
     <div class="row">
         <label for="weight">Gewicht:</label>
-        <p class="range-field">
-            <input type="range" id="test5" min="0" max="100"/>
+        <p class="range-field center-align">
+            <span id="sliderValue3" ></span><br>
+            <input type="range" min="0" max="100" step="1" name="sld" value="50" onchange="showValue3(this.value)">
         </p>
     </div>
 
@@ -102,5 +104,6 @@
 
 
 </form>
+<script type="text/javascript"  src="assets/js/slider.js"></script>
 
 
