--- a/src/frontend/views/search.hbs
+++ b/src/frontend/views/search.hbs
@@ -1,26 +1,34 @@
+{{ setVar "offer" true }}
 {{> topInclude }}
 
 <div class="container">
-    <div class="row s12 l12 xl12 right-align">
-        <h6>Adresse</h6>
+
+    <div class="row l1 s1 xl1"></div>
+    <ul class=" row l10 s10 xl10 tabs tabs-fixed-width tab-demo z-depth-1 taboffer">
+        <li class="tab"><a href="#test1">Für Hunde besitzer</a></li>
+        <li class="tab"><a href="#test2">Für Anbieter</a></li>
+    </ul>
+    <div class="row l1 s1 xl1"></div>
+    <div class="row s12 l12 xl12">
+
+        <div class="row ">
+            <div class="col s12 l3 xl3 filteroffer">
+                {{#if offer}}
+                    {{>filterOffer}}
+                {{else}}
+                    {{>filterHelper}}
+                {{/if}}
+            </div>
+            <div class="col s1 l1 xl1">
+            </div>
+            <div class="col s12 l8 xl8 filteroffer">
+                {{#if offer}}
+                    {{>containerOffer_Owner}}
+                {{else}}
+                    {{>containerOffer_Customer}}
+                {{/if}}
+            </div>
+        </div>
     </div>
-    <div class="row ">
-        <div class="col s12 l3 xl3 filteroffer">
-            {{#if true}}
-                {{>filterOffer}}
-            {{else}}
-                {{>filterHelper}}
-            {{/if}}
-        </div>
-        <div class="col s1 l1 xl1">
-        </div>
-        <div class="col s12 l8 xl8 filteroffer">
-            {{#if true}}
-                {{>containerOffer_Owner}}
-            {{else}}
-                {{>containerOffer_Customer}}
-            {{/if}}
-        </div>
-    </div>
-</div>
+
 {{>bottomInclude}}
