User Register possible

--- a/src/frontend/views/createOffer.hbs
+++ b/src/frontend/views/createOffer.hbs
@@ -23,7 +23,7 @@
             </div>
             <div class="col l6">
                 <h5>Service(s)</h5>
-                {{#each animals}}
+                {{#each services}}
                     <div class="row">
                         <label>
                             <script>
