--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <form class="registerForm col l12">
+        <form class="registerForm col l12" method="post" action="/register/submit">
             <div class="row">
                 <div class="input-field col l6">
                     <input id="firstNameRegister" type="text" name="firstNameRegister"
