--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -9,6 +9,7 @@
             <li><a id="" href="/profile">Profile</a></li>
             <li><a id="" href="/create-search">Suche erstellen</a></li>
             <li><a id="" href="/create-offer">Angebot Erstellen</a></li>
+            <li><a id="" href="/create-animal">Tier Erstellen</a></li>
         </ul>
     </div>
 
