--- a/src/frontend/views/createSearch.hbs
+++ b/src/frontend/views/createSearch.hbs
@@ -24,16 +24,13 @@
                 </div>
             </div>
         </div>
-        <form class="col l12">
+        <form class="col l12" method="post" action="/create-search/submit">
             <div class="col l6">
                 <h5>Service(s)</h5>
                 {{#each services}}
                     <div class="row">
                         <label>
-                            <script>
-                                let serviceIdentifier = 'offerService' + {{this.name}};
-                            </script>
-                            <input type="checkbox" name=serviceIdentifier id=serviceIdentifier>
+                            <input type="checkbox" name="offerService{{this.name}}" id="offerService{{this.name}}">
                             <span>{{this.name}}</span>
                         </label>
                     </div>
@@ -48,8 +45,8 @@
 
             <div class="row">
                 <div class="col l12 input-field">
-                    <label for="offerDescription">Beschreibung der Suche</label>
-                    <textarea id="offerDescription" class="materialize-textarea" maxlength="600"></textarea>
+                    <label for="searchDescription">Beschreibung der Suche</label>
+                    <textarea id="searchDescription" class="materialize-textarea" maxlength="600"></textarea>
                     <span class="helper-text">Maximal 600 Zeichen</span>
                 </div>
             </div>
