implemented test login in frontend

--- a/src/frontend/views/login.hbs
+++ b/src/frontend/views/login.hbs
@@ -10,13 +10,13 @@
             <div class="row">
                 <div class="input-field col l12">
                     <label for="emailLogin">Email</label>
-                    <input id="emailLogin" name="emailLogin" type="email" class="validate">
+                    <input id="emailLogin" name="username" type="email" class="validate">
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col l12">
                     <label for="passwordLogin">Passwort</label>
-                    <input id="passwordLogin" name="passwordLogin" type="password" class="validate">
+                    <input id="passwordLogin" name="password" type="password" class="validate">
                 </div>
             </div>
             <input id="loginButton" type="submit" value="Login" class="btn">
