Finished Animal Add Page Updated footer.hbs

--- a/src/frontend/views/partials/footer.hbs
+++ b/src/frontend/views/partials/footer.hbs
@@ -1,16 +1,40 @@
 <footer class="page-footer">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">WirVsVirus Haustier</h5>
+            <div class="col l4 s12">
+                <h5 class="white-text">Haustierpflegevermittlung</h5>
                 <p class="grey-text text-lighten-4">Projekt des #wirvsvirus Hackathons der Bundesregierung</p>
+            </div>
+            <div class="col l8 s12">
+                <div class="col l7 s12 right">
+                    <img class="right responsive-img" src="/assets/icons/wirVsVirusLogo.png"
+                         alt="WirVsVirusLogo">
+                </div>
             </div>
         </div>
     </div>
     <div class="footer-copyright">
         <div class="container">
-            Copyright &#169; 2020 Haustier e.V.
-            <a class="grey-text text-lighten-4 right" href="#">More Links</a>
+            <div class="row">
+                <div class="col l4">Copyright &#169; 2020 Haustier e.V.</div>
+                <div class="col l8">
+                    <div class="row">
+                        <div class="right">
+                            <div class="col l5">
+                                <img class="responsive-img" id="footerGitLogo" src="/assets/icons/github-brands.svg"
+                                     alt="Github Logo">
+                            </div>
+                            <div class="col l1"></div>
+                            <div class="col l6">
+                                <a class="grey-text text-lighten-4 right"
+                                   href="https://github.com/patriksimms/wirvsvirus-haustier">
+                                    Github
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
