--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="input-field col l12">
                     <label for="descriptionRegister">Kurzbeschreibung</label>
-                    <textarea id="descriptionRegister" class="materialize-textarea" maxlength="600"></textarea>
+                    <textarea id="descriptionRegister" name="descriptionRegister" class="materialize-textarea" maxlength="600"></textarea>
                     <span class="helper-text">Maximal 400 Zeichen</span>
                 </div>
             </div>
