--- a/src/frontend/views/partials/containerOffer_Owner.hbs
+++ b/src/frontend/views/partials/containerOffer_Owner.hbs
@@ -6,7 +6,7 @@
                         <div class="card-stacked" id="info">
                             <div class="card-content">
                                 <p class="flow-text">Name: {{this.name}}</p>
-                                <p class="flow-text">Name: {{this.lastname}}</p>
+                                <p class="flow-text">VorName: {{this.lastname}}</p>
                                 <p class="flow-text">Größe: {{this.age}}</p>
                             </div>
                             <div class="card-content">
