--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -3,7 +3,7 @@
         <a href="/" class="brand-logo">WirVsVirus</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a id="" href="/search">Suche</a></li>
+            <li><a id="" href="/searchOffer">Suche</a></li>
             <li><a id="" href="/login">Login</a></li>
             <li><a id="" href="/register">Register</a></li>
             <li><a id="" href="/profile">Profile</a></li>
@@ -14,7 +14,7 @@
     </div>
 
     <ul class="sidenav" id="mobile-demo">
-        <li><a id="" href="/search">Suche</a></li>
+        <li><a id="" href="/searchOffer">Suche</a></li>
         <li><a id="" href="/login">Login</a></li>
         <li><a id="" href="/register">Register</a></li>
         <li><a id="" href="/profile">Profile</a></li>
