--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -19,8 +19,8 @@
         <!--//tierart -->
         <label for="species">Art</label>
         <select class="filterDropDowns" id="species" name="species">
-            {{#each page.species}}
-                <option value="{{this.uuid}}">{{this.name}}</option>
+            {{#each animals}}
+                <option value="{{this.name}}">{{this.name}}</option>
             {{/each}}
         </select>
     </div>
@@ -37,20 +37,19 @@
     <div class="row">
         <label for="service">Service</label>
         <select id="service" name="service">
-            {{#each page.service}}
-                <option value="{{this.uuid}}">{{this.name}}</option>
+            {{#each services}}
+                <option value="{{this.name}}">{{this.name}}</option>
             {{/each}}
         </select>
     </div>
     <!-- Alter-->
-    <div class="row">
-        <label for="age">Alter:</label>
-        <p class="range-field center-align">
-            <span id="sliderValue"></span><br>
-            <input type="range" min="0" max="100" step="1" name="sld" value="50" onchange="showValue(this.value)">
-        </p>
+    <div class="row filterGroup">
+        <label for="age">Alter:</label><br>
+        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="24" placeholder="Anfang"
+               pattern="[0-9]{3}0" onchange="handleChange(this,0,24);">
+        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="25" placeholder="Ende"
+               pattern="[0-9]{3}0" onchange="handleChange(this,1,25);">
     </div>
-
     <!-- Rasse -->
     <div class="row">
 
@@ -65,21 +64,21 @@
 
     <!-- Groesse -->
 
-    <div class="row">
-        <label for="weight">Größe(in cm):</label>
-        <p class="range-field center-align">
-            <span id="sliderValue2"></span><br>
-            <input type="range" min="0" max="100" step="1" name="sld" value="50" onchange="showValue2(this.value)">
-        </p>
+    <div class="row filterGroup">
+        <label for="age">Größe(in cm):</label><br>
+        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="149" placeholder="Anfang"
+               pattern="[0-9]{3}" onchange="handleChange(this);">
+        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="150" placeholder="Ende"
+               pattern="[0-9]{3}" onchange="handleChange(this);">
     </div>
 
     <!-- Gewicht -->
-    <div class="row">
-        <label for="weight">Gewicht:</label>
-        <p class="range-field center-align">
-            <span id="sliderValue3" ></span><br>
-            <input type="range" min="0" max="100" step="1" name="sld" value="50" onchange="showValue3(this.value)">
-        </p>
+    <div class="row filterGroup">
+        <label for="age">Gewicht:</label><br>
+        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="98" placeholder="Anfang"
+               pattern="[0-9]{2}" onchange="handleChange(this);">
+        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="99" placeholder="Ende"
+               pattern="[0-9]{2}" onchange="handleChange(this);">
     </div>
 
     <!-- Dringlichkeit -->
@@ -104,6 +103,6 @@
 
 
 </form>
-<script type="text/javascript"  src="assets/js/slider.js"></script>
+<script type="text/javascript"  src="assets/js/handleInputfield.js"></script>
 
 
